[Harish] : Add controller layer for get topic and interests and generate swagger docs
